# mttmath

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: dependencies.cmake  tests.cmake
include/geometry/: vec2.h
include/rand/: random.hpp
include/trig/: trig.hpp
src/: rand.cpp  trig.cpp  vec2.cpp
tests/: vec2.cpp
